# lib/db/src/schema/index.ts
@@ -2,3 +2,4 @@ export * from "./users";
 export * from "./cases";
 export * from "./tasks";
 export * from "./intern_quests";
+export * from "./bookings";
